--- a/index.html
+++ b/index.html
@@ -5,31 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
-    <title>Unit Conversion</title>
+    <title>Password Generator</title>
   </head>
   <body>
-    <section id="header">
-      <div class="main-container">
-        <div class="container-title">
-          <h2>Metric/Imperial unit conversion</h2>
-          <a onclick='ask()'><h1 id="unit">0</h1></a>
+    <div class="main">
+        <div class="container">
+
         </div>
-        <div class="container-numbers">
-          <div class="para-wrapper">
-            <p class="para">Length (Meter/Feet)</p>
-            <p class="sub-para-length">0</p>
-          </div>
-          <div class="para-wrapper">
-            <p class="para">Volume (Liters/Gallons)</p>
-            <p class="sub-para-volume">0</p>
-          </div>
-          <div class="para-wrapper">
-            <p class="para">Mass (Kilograms/Pounds)</p>
-            <p class="sub-para-mass">0</p>
-          </div>
-        </div>
-      </div>
-    </section>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
