--- a/Password-Generator/index.html
+++ b/Password-Generator/index.html
@@ -62,13 +62,17 @@
         <div class="bubble"></div>
         <div class="bubble"></div>
       </div>
-        <div class="container">
-          <div class="header">
-            <h1 class="title">Generate a <span class="green">random password</span></h1>
-            <h2 class="subtitle">High security and easy password generator.</h2>
-            <button class="password-btn"></button>
+      <div class="container">
+        <div class="header">
+          <h1 class="title">
+            Generate a <span class="green">random password</span>
+          </h1>
+          <h2 class="subtitle">High security and easy password generator.</h2>
+          <div class="btn-wrapper">
+            <button class="password-btn">Generate Password</button>
           </div>
         </div>
+      </div>
     </div>
     <script src="index.js"></script>
   </body>
